# Memeger

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  Memeger | UML.drawio.html  README.md  connection.cpp  db_raw.cpp  main.cpp  request.cpp  responce.cpp  sdfsdfds  sdfvdsv  server.cpp
.github/workflows/: ci.yml
Memeger/Memeger/: connection.cpp  request.cpp  response.cpp  server.cpp
ServerMemeger/: CMakeLists.txt  async.http.client.cpp  async.http.server.cpp  connection.cpp  script.py
ServerMemeger/project/: CMakeLists.txt
ServerMemeger/project/include/: idatabase.h  models.h  postgresql_db.h
ServerMemeger/project/src/: main.cpp  models.cpp  postgresql_db.cpp
ServerMemeger/project/test/: CMakeLists.txt
project/: CMakeLists.txt  ClientMain.cpp  ServerMain.cpp  coverage.info  main.cpp
project/DB/: CMakeLists.txt
project/DB/src/: main.cpp  models.cpp  postgresql_db.cpp
project/client/: CMakeLists.txt
project/client/include/: async.http.client.h
project/client/src/: async.http.client.cpp
project/database/: CMakeLists.txt
project/database/include/: idatabase.h  imessage.h  models.h  postgresql_db.h
project/database/src/: models.cpp  postgresql_db.cpp
project/database/test/: CMakeLists.txt  models_unit.cpp  postgresql_db_integrity.cpp  postgresql_db_unit.cpp
project/include/: chat.h  connection.h  idatabase.h  imessage.h  models.h  postgresql_db.h  request.h  response.h  search_memeger.h  user_info.h
project/server/: CMakeLists.txt
project/server/include/: async.http.server.h  connection.h  request.h  response.h
project/server/src/: async.http.server.cpp  connection.cpp  request.cpp  response.cpp
project/server/test/: CMakeLists.txt  unit.cpp
project/src/: async.http.client.cpp  async.http.server.cpp  chat.c  chat.cpp  connection.cpp  main.cpp  models.cpp  postgresql_db.cpp  request.cpp  response.cpp  search.c  search_memeger.cpp  user_info.cpp
project/test/: CMakeLists.txt  postgresql_db.cpp  postgresql_db_integrity.cpp  postgresql_db_unit.cpp
project/ui/: CMakeLists.txt  README.md  theme.css
project/ui/include/: chat.h  login-signup.h  search.h  store.h
project/ui/src/: chat.cpp  http.client.cpp  login-signup.cpp  search.cpp
project/ui/test/: test.cpp
project/Покрытие/: покрытие.txt
ui/: README.md  main.c  store.h
