# Copyright 2022 by Artem Ustsov

# ==============================================================================
# I | General project settings
# ==============================================================================
project(project)

cmake_minimum_required(VERSION 3.14)
add_subdirectory(database)
